--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
 <!-- ======== PRODUTO 1 — CANECA ======== -->
 <div class="produto">
     <img src="imagens/caneca.png" alt="Caneca branca" style="width:130px; border-radius:6px;">
-    <h2>Caneca Personalizada</h2>
+    <h2>Caneca branca Personalizada</h2>
     <p>R$ 35,00</p>
-    <button onclick="adicionarCarrinho('Caneca branca Personalizada', 35)">Adicionar</button>
+    <button onclick="adicionarCarrinho('Caneca Personalizada', 35)">Adicionar</button>
 </div>
 
 <!-- ======== PRODUTO 2 — CAMISETA ======== -->
 <div class="produto">
     <img src="imagens/camisa.png" alt="Camiseta branca" style="width:130px; border-radius:6px;">
-    <h2>Camiseta Personalizada</h2>
+    <h2>Camiseta branca Personalizada</h2>
     <p>R$ 35,00</p>
-    <button onclick="adicionarCarrinho('Camiseta branca Personalizada', 35)">Adicionar</button>
+    <button onclick="adicionarCarrinho('Camiseta Personalizada', 35)">Adicionar</button>
 </div>
 
 
@@ -183,4 +183,5 @@
 
 </body>
 </html>
+
 
