--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Site Arcanjo Artes Gráficas</title>
 
-    <!-- ======== CSS (ESTILIZAÇÃO) ======== -->
+    <!-- ======== CSS ======== -->
     <style>
         body {
             margin: 0;
@@ -183,5 +183,6 @@
 
 </body>
 </html>
+
 
 
