--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <!-- ======== HEADER ======== -->
     <header>
-        <img src="imagens/logo.png" alt="logo">
+        <img src="imagens/logo.png" alt="Logo">
     </header>
 
     <!-- ======== MENU ======== -->
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
